--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
 body {
-  margin: 0;
+  
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.pokemon{
+	margin-right: auto;
+	margin-left: 15px;
+	text-align: center;
+	box-shadow: 10px 10px 160px -200px rgba(0,0,0,0.75);
+	background-color: #dbdbdb;
+	display: inline-block;
+	width: 10%;
+	border-radius: 10px;
+
+
+
+}
+
+.box-pokemon{
+-webkit-box-shadow: 0px 11px 6px 0px rgba(184,178,184,1);
+-moz-box-shadow: 0px 11px 6px 0px rgba(184,178,184,1);
+box-shadow: 0px 11px 6px 0px rgba(184,178,184,1);
+width: 45%;
+height: 75%;
+margin:auto;
+text-align: center;
+}
+
+li{
+	list-style-type: none;
+	display: grid;
+}
+
+
+
+
